<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="operation_date">%s</string>
    <string name="operation_category">%s</string>
    <string name="operation_name">%s</string>
    <string name="operation_amount">%s</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="missing_field">One of the fields wasn\'t filled properly.</string>
    <string name="required_field">field required</string>
    <string name="missing_category">Select a category</string>
    <string name="missing_type">Select type of operation</string>
    <string name="invalid_date">invalid date</string>
    <string name="operation_saved">Operation has been saved</string>
    <string name="change_saved">Changes saved successfully</string>

    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="save">Save</string>
    <string name="info">info</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="add_new_account">Add New Account</string>
    <string name="save_account">New Account was added</string>
    <string name="currency_formatter">%.2f</string>
    <string name="transaction_deleted">Operation has been deleted</string>
    <string name="undo">Undo</string>
    <string name="Settings">Settings</string>

    <string name="home">Expenses</string>
    <string name="type">Type</string>
    <string name="details">Details</string>
    <string name="add_operation">Add operation</string>
    <string name="add_account">Add account</string>
    <string name="select_account">Select account</string>

    <string name="all_operations">all operations</string>
    <string name="ten_days">10 days</string>
    <string name="thirty_days">30 days</string>
    <string name="sixty_days">60 days</string>
    <string name="ninety_days">90 days</string>
    <string name="six_months">six months</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
</resources>