<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="10dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_operations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                tools:checked="true"
                android:text="@string/all_operations" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ten_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/ten_days" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_thirty_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/thirty_days"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sixty_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/sixty_days"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ninety_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/ninety_days"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_six_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/six_months"/>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>