<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">


    <TextView
        android:id="@+id/operation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintWidth_percent="25" />

    <TextView
        android:id="@+id/operation_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/operation_category"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/operation_name"
        app:layout_constraintStart_toEndOf="@id/operation_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintWidth_percent="15" />

    <TextView
        android:id="@+id/operation_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/operation_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/operation_amount"
        app:layout_constraintStart_toEndOf="@id/operation_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintWidth_percent="30" />

    <TextView
        android:id="@+id/operation_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:minWidth="70dp"
        android:text="@string/operation_amount"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"
        app:layout_constraintWidth_percent="30" />
</androidx.constraintlayout.widget.ConstraintLayout>