<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="10dp"
    tools:context="fragment.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/theme_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dark_theme"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/theme_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/theme_string" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locale_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/language"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/theme_string"
        app:layout_constraintTop_toBottomOf="@id/theme_string" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/app_locale"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/language"
        app:layout_constraintTop_toTopOf="@id/locale_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/locale_string">

        <AutoCompleteTextView
            android:id="@+id/app_locale_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/currency_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/currency"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/locale_string"
        app:layout_constraintTop_toBottomOf="@id/locale_string" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/operation_currency"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        app:layout_constraintTop_toTopOf="@id/currency_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/currency_string">

        <AutoCompleteTextView
            android:id="@+id/operation_currrency_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_string" />
</androidx.constraintlayout.widget.ConstraintLayout>